# fileserve

./: .gitignore  README.md  pyproject.toml
src/fileserve/: fileserve.py
