[project]
name = "fileserve"
version = "0.1.0"
description = "A simple file server written in python"
authors = [
    { name = "avycado13", email = "108358183+avycado13@users.noreply.github.com" }
]
dependencies = [
    "click>=8.1.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"fileserve" = "fileserve.fileserve:serve_files"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fileserve"]
